<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="@dimen/cardCornerRadius"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/shape_parrafo">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/altoImageViewHome"
                    android:layout_marginTop="1dp"
                    android:src="@mipmap/ic_launcher" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marginHomeSubtitulo"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/inicio_frag_tv_donde"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/tamanioTitulo"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                   />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marginHomeSubtitulo"
                    android:layout_marginTop="@dimen/marginHomeSubtitulo"
                    android:layout_marginRight="@dimen/marginHomeSubtitulo"
                    android:layout_marginBottom="10dp"
                    android:text="@string/inicio_frag_tv_donde_resp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/tamanioSubtitulo" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="@dimen/cardCornerRadius"
            app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/shape_parrafo">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/altoImageViewHome"
                android:src="@mipmap/ic_launcher" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginHomeSubtitulo"
                android:layout_marginTop="@dimen/marginHomeSubtitulo"
                android:layout_marginRight="@dimen/marginHomeSubtitulo"
                android:text="@string/inicio_frag_tv_por_que"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/tamanioTitulo"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginHomeSubtitulo"
                android:layout_marginTop="@dimen/marginHomeSubtitulo"
                android:layout_marginRight="@dimen/marginHomeSubtitulo"
                android:layout_marginBottom="10dp"
                android:text="@string/inicio_frag_tv_por_que_resp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/tamanioSubtitulo" />


        </LinearLayout>
        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/shape_parrafo">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altoImageViewHome"
                        android:src="@mipmap/ic_launcher" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary"  />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/marginHomeSubtitulo"
                        android:layout_marginTop="@dimen/marginHomeSubtitulo"
                        android:layout_marginRight="@dimen/marginHomeSubtitulo"
                        android:text="@string/inicio_frag_tv_info"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/marginHomeSubtitulo"
                        android:layout_marginTop="@dimen/marginHomeSubtitulo"
                        android:layout_marginRight="@dimen/marginHomeSubtitulo"
                        android:text="@string/inicio_frag_tv_info_resp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginBottom="10dp"
                        android:textSize="@dimen/tamanioSubtitulo" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>


</FrameLayout>